Fix for viewport height issue on Safari iOS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,7 +241,7 @@ h6,
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   background: url("../img/hero-bg.jpg") center;
   background-size: cover;
 }
@@ -249,7 +249,6 @@ h6,
 #hero:before {
   content: "";
   background: rgba(5, 13, 24, 0.3);
-  height: 100vh;
   position: absolute;
   bottom: 0;
   top: 0;
